k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
  namespace: k8s-assn
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 3001
