k8s/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: backend-ingress
 namespace: k8s-assn
spec:
 ingressClassName: nginx
 rules:
 - http:
     paths:
     - path: /api
       pathType: Prefix
       backend:
         service:
           name: backend-clusterip-service
           port:
             number: 80
